<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.LocationDetails">

    <TextView
        android:id="@+id/detailsDateTextView"
        style="@style/CustomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/dateLabel"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsNameTextView" />

    <TextView
        android:id="@+id/detailsLatTextView"
        style="@style/CustomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/lat_placeholder"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsDateTextView" />

    <TextView
        android:id="@+id/detailsLngTextView"
        style="@style/CustomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/lng_placeholder"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsLatTextView" />

    <TextView
        android:id="@+id/detailsDescriptionLabelTextView"
        style="@style/CustomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/description_label"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/detailsDescriptionBoxTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/detailsAddressTextView"
        style="@style/CustomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/addressLabel"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/detailsNameTextView"
        style="@style/CustomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/name_hint"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsAddressTextView" />

    <View
        android:id="@+id/view"
        style="@style/Divider"
        android:layout_marginTop="71dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/locationDetailsTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/kalam_bold"
        android:text="@string/details_title"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/detailsBackBTN"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundbutton"
        android:contentDescription="@string/add_button_plus"
        android:src="@drawable/abc_vector_test"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/detailsDeleteBTN"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundbutton"
        android:contentDescription="@string/add_button_plus"
        android:src="@android:drawable/ic_delete"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/detailsEditBTN"
        app:layout_constraintStart_toEndOf="@+id/locationDetailsTitleLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/detailsEditBTN"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="19dp"
        android:background="@drawable/roundbutton"
        android:contentDescription="@string/add_button_plus"
        android:src="@android:drawable/ic_menu_preferences"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/detailsPictureImageView"
        android:layout_width="219dp"
        android:layout_height="390dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/pictureDesc"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsAddressTextView"
        app:srcCompat="@drawable/borders_light_grey" />

    <TextView
        android:id="@+id/detailsDescriptionBoxTextView"
        style="@style/CustomText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/borders_light_grey"
        android:fontFamily="@font/lato_bold"
        android:padding="4dp"
        android:scrollbars="vertical"
        android:textSize="20sp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsPictureImageView"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>